--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -9,3 +9,14 @@ If you find our "BUQEYE Guide for Projection-based Emulators in nuclear physics"
 }
 ```
 :::
+
+# Funding {.unnumbered}
+This material is based upon work supported by the U.S. Department of Energy, Office of Science, Office of Nuclear Physics, under the FRIB Theory Alliance award DE-SC0013617.
+This work was supported in part by the National Science Foundation under award numbers PHY-1913069 and PHY-2209442 and the NSF CSSI program under award
+number OAC-2004601 (BAND Collaboration @BAND_Framework), and the NUCLEI SciDAC Collaboration under U.S. Department of Energy MSU subcontract RC107839-OSU\@.
+
+
+# Acknowledgments {.unnumbered}
+We thank the Editors Maria Piarulli, Evgeny Epelbaum, and Christian Forss{\'e}n for the kind invitation to contribute to this Frontiers Research Topic @ResearchTopicUQ.
+We are also grateful to our BUQEYE @BUQEYEgithub and BAND @BAND_Framework collaboration colleagues for sharing their invaluable insights with us, and especially to Daniel Phillips for fruitful discussions in the BUQEYE state.
+C.D. thanks Petar Mlinari{\'c} for sharing his deep insights into the software library **pyMOR** @milk2016pyMOR for building MOR applications with the Python.
