--- a/docs/mymacros.tex
+++ b/docs/mymacros.tex
@@ -37,7 +37,9 @@
 \newcommand{\umatrix}{\boldsymbol{u}}
 \newcommand{\genkvp}{\mathcal{L}}
 
-\newcommand{\identity}{\mathds{1}}
+%\usepackage{dsfont}
+\newcommand{\identity}{1\!\!1} %{\mathds{1}}
+\newcommand{\slashed}[1]{#1}
 \newcommand{\trialfunc}{\xi}
 \newcommand{\testfunc}{\zeta}
 
